@@ -1,3 +1,4 @@
+
 package grapefruit.command.parameter.mapper.builtin;
 
 import com.google.common.reflect.TypeToken;
@@ -18,12 +19,13 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Queue;
 import java.util.function.Function;
-import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.requireNonNull;
 
 public class NumberMapper<S, N extends Number> extends AbstractParameterMapper<S, N> {
     private static final List<String> PREFIXES;
+    private static final List<String> NUMBER_OPTIONS;
     private final Function<String, N> converter;
 
     static {
@@ -37,7 +39,15 @@ public class NumberMapper<S, N extends Number> extends AbstractParameterMapper<S
 
         PREFIXES = prefixes.stream()
                 .map(String::valueOf)
-                .toList();
+                .collect(Collectors.toList());
+        final List<Integer> numberOptions = new ArrayList<>();
+        for (int i = 0; i <= 9; i++) {
+            numberOptions.add(i);
+        }
+
+        NUMBER_OPTIONS = numberOptions.stream()
+                .map(String::valueOf)
+                .collect(Collectors.toList());
     }
 
     public NumberMapper(final @NotNull TypeToken<N> type, final @NotNull Function<String, N> converter) {
@@ -86,28 +96,9 @@ public class NumberMapper<S, N extends Number> extends AbstractParameterMapper<S
             return PREFIXES;
         } else {
             if (Miscellaneous.isNumber(currentArg)) {
-                final double number = Double.parseDouble(currentArg);
-                final Optional<Range> rangeOpt = modifiers.find(Range.class);
-                final Predicate<Double> isInRange = x -> rangeOpt
-                        .map(range -> range.min() <= x && range.max() >= x)
-                        .orElse(true);
-                if (!isInRange.test(number)) {
-                    return List.of();
-                }
-
                 final List<String> result = new ArrayList<>();
-                final double multipliedBy10 = number * 10;
-                if (!isInRange.test(multipliedBy10)) {
-                    return List.of();
-                }
-
-                for (int i = 0; i < 9; i++) {
-                    final double option = multipliedBy10 + i;
-                    if (!isInRange.test(option)) {
-                        break;
-                    }
-
-                    result.add(String.valueOf(option));
+                for (final String number : NUMBER_OPTIONS) {
+                    result.add(currentArg + number);
                 }
 
                 return result;
